--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,7 @@ output:
   format: colored-line-number
   print-issued-lines: true
   print-linter-name: true
+  sort-results: true
 
 linters:
   disable-all: true
