--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,11 @@ jobs:
       run: |
         make test.unit
 
+    - name: Benchmark
+      run: |
+        make test.benchmark
+
     - name: Report Test Coverage
-      if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v1
       # with:
       #   token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
