--- a/.github/workflows/deps.yaml
+++ b/.github/workflows/deps.yaml
@@ -20,15 +20,15 @@ jobs:
         git config --global user.email '72795724+arhatbot@users.noreply.github.com'
         git config --global user.name 'Arhat Bot'
 
-    - name: Update vendored packages
+    - name: Update modules
       run: |
         make tidy
 
-    - name: Push vendored packages
+    - name: Push module updates
       run: |
         git add --all .
-        if git commit -m 'deps(vendor): Update vendored packages'; then
+        if git commit -m 'deps(vendor): Update modules'; then
           git push
         else
-          echo "no vendored package changed, skipping push"
+          echo "no module changed, skipping push"
         fi
