--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,7 +12,7 @@ output:
 linters:
   disable-all: true
   enable:
-  - golint
+  - revive
   - errcheck
   - misspell
   - deadcode
@@ -23,11 +23,10 @@ linters:
   - varcheck
   - unconvert
   - bodyclose
-  - scopelint
+  - exportloopref
   - goimports
   - ineffassign
   - gofmt
-  - maligned
   - goconst
   - gocyclo
   - unparam
@@ -38,8 +37,33 @@ linters:
 linters-settings:
   govet:
     check-shadowing: true
-  golint:
-    min-confidence: 0
+    enable:
+    - atomicalign
+    - assign
+    - atomic
+    - bools
+    - buildtag
+    - cgocall
+    - composites
+    - copylocks
+    - errorsas
+    - framepointer
+    - httpresponse
+    - ifaceassert
+    - loopclosure
+    - lostcancel
+    - nilfunc
+    - printf
+    - shift
+    - stdmethods
+    - stringintconv
+    - structtag
+    - testinggoroutine
+    - unmarshal
+    - tests
+    - unreachable
+    - unsafeptr
+    - unusedresult
   misspell:
     locale: US
   unused:
@@ -52,8 +76,6 @@ linters-settings:
     line-length: 120
     # tab width in spaces. Default to 1.
     tab-width: 4
-  maligned:
-    suggest-new: true
 
 issues:
   exclude-rules:
